[gd_scene load_steps=12 format=3 uid="uid://mxenhixj6k77"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_5gtm7"]
[ext_resource type="Theme" uid="uid://dcjb7qfknp7ir" path="res://Assets/Ui/ui_theme.tres" id="2_holyn"]
[ext_resource type="Texture2D" uid="uid://cyk0a14jcu48k" path="res://Assets/Ui/settings_icon.png" id="3_gmav2"]
[ext_resource type="Texture2D" uid="uid://bnjyvsfbhjctv" path="res://Assets/Ui/left_arrow_icon.png" id="4_evmyr"]
[ext_resource type="Texture2D" uid="uid://bp5lbppuecqjy" path="res://Assets/Ui/right_arrow_icon.png" id="5_il6h4"]
[ext_resource type="Texture2D" uid="uid://yk0lk8ehl7mw" path="res://Assets/Main menu/ClassicModeBanner.png" id="6_jkhwi"]
[ext_resource type="Texture2D" uid="uid://cfjnvw7f7hwpx" path="res://Assets/Ui/check_icon.png" id="7_ftjrw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n58q2"]
bg_color = Color(0.243137, 0.352941, 0.835294, 0.639216)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1rw0o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s76sj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8ceh3"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_holyn")
script = ExtResource("1_5gtm7")

[node name="MainMenu" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="bg" type="ColorRect" parent="MainMenu"]
layout_mode = 0
offset_right = 540.0
offset_bottom = 1200.0
color = Color(0.823529, 0.811765, 0.686275, 1)

[node name="Title" type="Label" parent="MainMenu"]
layout_mode = 2
offset_left = 44.0
offset_top = 222.0
offset_right = 495.0
offset_bottom = 453.0
theme_type_variation = &"HeaderLarge"
text = "Card
Tanks"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Settings" type="Button" parent="MainMenu"]
layout_mode = 0
offset_left = 45.0
offset_top = 46.0
offset_right = 125.0
offset_bottom = 126.0
icon = ExtResource("3_gmav2")
icon_alignment = 1
expand_icon = true

[node name="Play" type="Button" parent="MainMenu"]
layout_mode = 0
offset_left = 155.0
offset_top = 585.0
offset_right = 377.0
offset_bottom = 703.0
theme_type_variation = &"HeaderButton"
text = "Play"

[node name="ModeLeft" type="Button" parent="MainMenu"]
layout_mode = 0
offset_left = 61.0
offset_top = 975.0
offset_right = 141.0
offset_bottom = 1055.0
icon = ExtResource("4_evmyr")
icon_alignment = 1
expand_icon = true

[node name="ModeRight" type="Button" parent="MainMenu"]
layout_mode = 0
offset_left = 402.0
offset_top = 974.0
offset_right = 482.0
offset_bottom = 1054.0
icon = ExtResource("5_il6h4")
icon_alignment = 1
expand_icon = true

[node name="ModeImage" type="TextureRect" parent="MainMenu"]
layout_mode = 0
offset_left = 113.0
offset_top = 738.0
offset_right = 426.0
offset_bottom = 963.0
texture = ExtResource("6_jkhwi")
stretch_mode = 5

[node name="ModeName" type="Label" parent="MainMenu/ModeImage"]
layout_mode = 0
offset_top = 173.0
offset_right = 313.0
offset_bottom = 225.0
pivot_offset = Vector2(29.165, 0)
theme_type_variation = &"HeaderSmall"
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_n58q2")
text = "classic"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScore" type="Label" parent="MainMenu"]
layout_mode = 0
offset_left = 159.0
offset_top = 993.0
offset_right = 383.0
offset_bottom = 1100.0
text = "High score: ###"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Settings" type="Control" parent="."]
anchors_preset = 0
offset_top = -1200.0
offset_right = 540.0
metadata/_edit_group_ = true

[node name="CenterContainer" type="CenterContainer" parent="Settings"]
layout_mode = 0
offset_right = 540.0
offset_bottom = 1200.0

[node name="Panel" type="PanelContainer" parent="Settings/CenterContainer"]
custom_minimum_size = Vector2(450, 700)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Settings/CenterContainer/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 40

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/CenterContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Settings/CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"HeaderSmall"
text = "settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Settings/CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 65
theme_override_styles/separator = SubResource("StyleBoxEmpty_1rw0o")

[node name="Sound" type="HBoxContainer" parent="Settings/CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SoundButton" type="CheckBox" parent="Settings/CenterContainer/Panel/MarginContainer/VBoxContainer/Sound"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_type_variation = &"NoIcons"
icon = ExtResource("7_ftjrw")
icon_alignment = 1
expand_icon = true

[node name="VSeparator" type="VSeparator" parent="Settings/CenterContainer/Panel/MarginContainer/VBoxContainer/Sound"]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxEmpty_s76sj")

[node name="SoundLabel" type="Label" parent="Settings/CenterContainer/Panel/MarginContainer/VBoxContainer/Sound"]
layout_mode = 2
text = "Sound"

[node name="HSeparator2" type="HSeparator" parent="Settings/CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
theme_override_styles/separator = SubResource("StyleBoxEmpty_1rw0o")

[node name="Music" type="HBoxContainer" parent="Settings/CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MusicButton" type="CheckBox" parent="Settings/CenterContainer/Panel/MarginContainer/VBoxContainer/Music"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_type_variation = &"NoIcons"
icon = ExtResource("7_ftjrw")
icon_alignment = 1
expand_icon = true

[node name="VSeparator" type="VSeparator" parent="Settings/CenterContainer/Panel/MarginContainer/VBoxContainer/Music"]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxEmpty_s76sj")

[node name="MusicLabel" type="Label" parent="Settings/CenterContainer/Panel/MarginContainer/VBoxContainer/Music"]
layout_mode = 2
text = "Music"

[node name="HSeparator3" type="HSeparator" parent="Settings/CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 165
theme_override_styles/separator = SubResource("StyleBoxEmpty_8ceh3")

[node name="BackButton" type="Button" parent="Settings/CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back to main menu"
flat = true

[connection signal="pressed" from="MainMenu/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MainMenu/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MainMenu/ModeLeft" to="." method="_on_mode_left_pressed"]
[connection signal="pressed" from="MainMenu/ModeRight" to="." method="_on_mode_right_pressed"]
[connection signal="toggled" from="Settings/CenterContainer/Panel/MarginContainer/VBoxContainer/Sound/SoundButton" to="." method="_on_sound_button_toggled"]
[connection signal="toggled" from="Settings/CenterContainer/Panel/MarginContainer/VBoxContainer/Music/MusicButton" to="." method="_on_music_button_toggled"]
[connection signal="pressed" from="Settings/CenterContainer/Panel/MarginContainer/VBoxContainer/BackButton" to="." method="_on_settings_back_button_pressed"]
